added image to index.html

--- a/Workbook1/htmlPlayground/index.html
+++ b/Workbook1/htmlPlayground/index.html
@@ -6,10 +6,17 @@
         <title>HTML Playground</title>
     </head>
     <body>
-        <h1>Hello World</h1>
-        <img src="./lion.jpg" alt="Lion image" />
+        <h1>Lion</h1>
+        <h2>Where can they be found?</h2>
+        <h3>What should you do when encountering a lion?</h3>
+        <ul>
+            <li>Pray</li>
+            <li>Run</li>
+            <li>Run some more</li>
+        </ul>
+        <img src="https://www.shutterstock.com/shutterstock/photos/555551179/display_1500/stock-photo-single-lion-looking-regal-standing-proudly-on-a-small-hill-555551179.jpg" alt="Lion image" />
 
-        <a href="https://www.google.com">Go to Google</a>
+        <a href="https://www.google.com" target="_blank">Go to Google</a>
 
         <p>
             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras mauris lacus, volutpat gravida ipsum at,
