added anchor tag wrapping image

--- a/Workbook1/htmlPlayground/index.html
+++ b/Workbook1/htmlPlayground/index.html
@@ -9,15 +9,20 @@
         <h1>Lion</h1>
         <h2>Where can they be found?</h2>
         <h3>What should you do when encountering a lion?</h3>
+        <a id="table_of_contents"></a>
         <ul>
             <li>Pray</li>
             <li>Run</li>
             <li>Run some more</li>
         </ul>
-        <img src="https://www.shutterstock.com/shutterstock/photos/555551179/display_1500/stock-photo-single-lion-looking-regal-standing-proudly-on-a-small-hill-555551179.jpg" alt="Lion image" />
+
+        <a href="https://en.wikipedia.org/wiki/Lion" target="_blank">
+            <img src="https://www.shutterstock.com/shutterstock/photos/555551179/display_1500/stock-photo-single-lion-looking-regal-standing-proudly-on-a-small-hill-555551179.jpg" alt="Lion image" width="200" />
+        </a>
 
         <a href="https://www.google.com" target="_blank">Go to Google</a>
 
+        <a href="mailto:user@example.com">Email User</a>
         <p>
             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras mauris lacus, volutpat gravida ipsum at,
             iaculis iaculis augue. Ut interdum congue purus at pellentesque. Vestibulum libero augue, ultrices at congue
@@ -51,5 +56,6 @@
             nec urna enim. Vestibulum mattis ante augue, a porta justo sollicitudin id. Donec iaculis nisl vitae turpis
             maximus sagittis. Aenean est ante, porttitor sed sagittis sed, condimentum commodo dolor.
         </p>
+        <a href="#table_of_contents">Go to Table of Contents</a>
     </body>
 </html>
