--- a/Workbook1/htmlPlayground/index.html
+++ b/Workbook1/htmlPlayground/index.html
@@ -6,6 +6,39 @@
         <title>HTML Playground</title>
     </head>
     <body>
+        <hr />
+
+        <p>Lions are <b>sooo coooool!</b></p>
+
+        <hr />
+
+        <span>Test 1</span>
+        <span>Test 2</span>
+        <span>Test 3</span>
+
+        <div>Test 1</div>
+        <div>Test 2</div>
+        <div>Test 3</div>
+
+        <table>
+            <tr>
+                <th>First name</th>
+                <th>Last name</th>
+            </tr>
+            <tr>
+                <td>John</td>
+                <td>Doe</td>
+            </tr>
+            <tr>
+                <td>Jane</td>
+                <td>Doe</td>
+            </tr>
+            <tr>
+                <td>Greg</td>
+                <td>Testo</td>
+            </tr>
+        </table>
+
         <h1>Lion</h1>
         <h2>Where can they be found?</h2>
         <h3>What should you do when encountering a lion?</h3>
@@ -17,7 +50,11 @@
         </ul>
 
         <a href="https://en.wikipedia.org/wiki/Lion" target="_blank">
-            <img src="https://www.shutterstock.com/shutterstock/photos/555551179/display_1500/stock-photo-single-lion-looking-regal-standing-proudly-on-a-small-hill-555551179.jpg" alt="Lion image" width="200" />
+            <img
+                src="https://www.shutterstock.com/shutterstock/photos/555551179/display_1500/stock-photo-single-lion-looking-regal-standing-proudly-on-a-small-hill-555551179.jpg"
+                alt="Lion image"
+                width="200"
+            />
         </a>
 
         <a href="https://www.google.com" target="_blank">Go to Google</a>
@@ -56,6 +93,31 @@
             nec urna enim. Vestibulum mattis ante augue, a porta justo sollicitudin id. Donec iaculis nisl vitae turpis
             maximus sagittis. Aenean est ante, porttitor sed sagittis sed, condimentum commodo dolor.
         </p>
+        <div style="border: black 2px solid; color: blue; margin: 5px">
+            <h1>HTML</h1>
+            <p>
+                HTML (HyperText Markup Language) is the standard markup language for documents designed to be displayed
+                in a web browser. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam at mattis lacus.
+                Curabitur non lobortis odio. Aenean dapibus vulputate pulvinar. Duis ut.
+            </p>
+        </div>
+        <div style="border: black 2px solid; color: tomato; margin: 5px">
+            <h2>CSS</h2>
+            <p>
+                CSS (Cascading Style Sheets) is the language used to style an HTML document. CSS describes how HTML
+                elements should be displayed. Lorem ipsum dolor sit amet, consectetur adipiscing elit. In a orci eu
+                lectus pharetra bibendum. Etiam id arcu tincidunt velit porttitor consequat.
+            </p>
+        </div>
+        <div style="border: black 2px solid; margin: 5px">
+            <h1>JavaScript</h1>
+            <p>
+                JavaScript is the programming language that allows you to add dynamic behavior to a web site. For
+                example, when the user enters their email address into a form and clicks a button, JavaScript code can
+                send the email to a server to look up an order status, then JavaScript can generate HTML to display the
+                returned order and its status.
+            </p>
+        </div>
         <a href="#table_of_contents">Go to Table of Contents</a>
     </body>
 </html>
