added external styling

--- a/Workbook1/cssPlayground/index.html
+++ b/Workbook1/cssPlayground/index.html
@@ -4,16 +4,9 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Document</title>
-        <link href="styles/sweet-styles.css" rel="stylesheet" />
-        <style>
-            h1 {
-                text-align: center;
-                color: red;
-            }
-        </style>
+        <link href="./styles/sweet-styles.css" rel="stylesheet" />
     </head>
     <body>
-        <!-- style="text-align: center; color: red;" -->
-        <h1 style="color:blue;">Look here!</h1>
+        <h1>Hello World</h1>
     </body>
 </html>
