added ids and classes

--- a/Workbook1/cssPlayground/index.html
+++ b/Workbook1/cssPlayground/index.html
@@ -7,6 +7,27 @@
         <link href="./styles/sweet-styles.css" rel="stylesheet" />
     </head>
     <body>
-        <h1>Hello World</h1>
+        <style>
+            p {
+                color: green;
+            }
+
+            #targeted-element{
+                font-size: 4em;
+            }
+
+            .my-h1-elements {
+                font-family: monospace;
+            }
+
+        </style>
+
+        <h1 class="my-h1-elements">Hello World 1</h1>
+
+        <h1 class="my-h1-elements" id="targeted-element">Hello World 2</h1>
+
+        <h1>Hello World 3</h1>
+
+        <p>This is my paragraph</p>
     </body>
 </html>
