--- a/Workbook1/cssPlayground/index.html
+++ b/Workbook1/cssPlayground/index.html
@@ -8,6 +8,7 @@
     </head>
     <body>
         <style>
+
             p {
                 color: green;
             }
@@ -20,14 +21,35 @@
                 font-family: monospace;
             }
 
+            p:hover {
+                color: darkblue;
+            }
+
+            div h1 {
+                border: solid black;
+            }
+
+            header, footer {
+                background-color: lightblue;
+            }
+
         </style>
+
+        <header></header>
 
         <h1 class="my-h1-elements">Hello World 1</h1>
 
-        <h1 class="my-h1-elements" id="targeted-element">Hello World 2</h1>
+        <div>
 
-        <h1>Hello World 3</h1>
+            <h1 class="my-h1-elements" id="targeted-element">Hello World 2</h1>
+
+            <h1 title="Buy American">Hello World 3</h1>
+
+        </div>
 
         <p>This is my paragraph</p>
+
+        <footer></footer>
+
     </body>
 </html>
