--- a/Workbook1/cssPlayground/index.html
+++ b/Workbook1/cssPlayground/index.html
@@ -8,9 +8,18 @@
     </head>
     <body>
         <style>
-
+            #myElement {
+                color: yellow;
+            }
+            .myText {
+                color: blue;
+            }
+            div {
+                color: red;
+            }
         </style>
-
-
+        <div id="myElement" class="myText">
+            Hello World
+        </div>
     </body>
 </html>
