--- a/Workbook1/cssPlayground/index.html
+++ b/Workbook1/cssPlayground/index.html
@@ -8,18 +8,41 @@
     </head>
     <body>
         <style>
-            #myElement {
-                color: yellow;
+            .container div {
+                border: solid black 5px;
+                padding: 5px;
+                margin: 10px;
             }
-            .myText {
-                color: blue;
-            }
-            div {
+            #bug-element {
                 color: red;
+                background-color: black;
+                position: absolute;
+                padding:10px;
+                margin-top: 100px;
+                bottom:0;
+                right: 0;
             }
         </style>
-        <div id="myElement" class="myText">
-            Hello World
+
+        <div id="bug-element">Bug</div>
+
+        <div class="container">
+            <div>Hello World 1</div>
+            <div>Hello World 2</div>
+            <div>Hello World 3</div>
+            <div>Hello World 4</div>
         </div>
+        <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec et leo est. Integer et placerat mi, rutrum
+            hendrerit nisi. Praesent posuere volutpat ligula, non vestibulum nisl bibendum quis. Aenean quis orci
+            lobortis, aliquet urna ut, auctor augue. Nulla congue pharetra odio. Sed commodo enim id elit condimentum,
+            volutpat vestibulum quam commodo. Donec id consequat magna, ac elementum est. Vestibulum porttitor semper
+            tincidunt. Sed nec auctor quam, id faucibus magna. Aliquam erat volutpat. Proin vel felis augue. Vivamus sem
+            urna, pellentesque eget accumsan a, ultricies a est. Proin eget tempor sapien, nec blandit mi. Integer dui
+            odio, venenatis non dolor nec, consectetur semper diam. Duis dignissim, sem in lobortis dapibus, diam mi
+            dictum felis, ut ornare enim orci nec neque. Cras consectetur, felis posuere suscipit interdum, lectus nisl
+            cursus risus, quis varius dui elit ut leo. Etiam tellus quam, congue vitae lectus et, rhoncus egestas
+            tellus. Donec ultrices ipsum libero, auctor tincidunt est pretium nec. Fusce consequat placerat ultricies.
+        </p>
     </body>
 </html>
