--- a/Workbook1/cssPlayground/index.html
+++ b/Workbook1/cssPlayground/index.html
@@ -4,28 +4,22 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Document</title>
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.css" />
         <link href="./styles/sweet-styles.css" rel="stylesheet" />
+ 
     </head>
     <body>
         <style>
-            .container div {
-                border: solid black 5px;
-                padding: 5px;
-                margin: 10px;
+            .container {
+                display: flex;
+                width: 200px;
+                height: 200px;
+                flex-wrap: wrap;
             }
-            #bug-element {
-                color: red;
-                background-color: black;
-                position: absolute;
-                padding:10px;
-                margin-top: 100px;
-                bottom:0;
-                right: 0;
+            .container div {
+                flex-basis: 50%;
             }
         </style>
-
-        <div id="bug-element">Bug</div>
-
         <div class="container">
             <div>Hello World 1</div>
             <div>Hello World 2</div>
