--- a/Capstone/capstone1_ecommerce/index.html
+++ b/Capstone/capstone1_ecommerce/index.html
@@ -14,7 +14,44 @@
         <title>Document</title>
     </head>
     <body>
-        <button type="button" class="btn btn-danger">Base class</button>
+        <nav class="navbar navbar-expand-lg fixed-top" style="background-color: #ffe17d;">
+            <div class="container-fluid">
+                <a class="navbar-brand" href="#">
+                    <img
+                        src="https://cdn-icons-png.flaticon.com/512/5536/5536604.png"
+                        alt="Lion icon"
+                        width="60"
+                        height="48"
+                    />
+                    Pride Food
+                </a>
+                <button
+                    class="navbar-toggler"
+                    type="button"
+                    data-bs-toggle="collapse"
+                    data-bs-target="#navbarNavDropdown"
+                    aria-controls="navbarNavDropdown"
+                    aria-expanded="false"
+                    aria-label="Toggle navigation"
+                >
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                
+                <div class="collapse navbar-collapse" id="navbarNavDropdown">
+                    <ul class="navbar-nav">
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="#">Registration</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Products</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Checkout</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
 
         <script
             src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
