--- a/Capstone/capstone1_ecommerce/registration.html
+++ b/Capstone/capstone1_ecommerce/registration.html
@@ -53,11 +53,13 @@
             </div>
         </nav>
 
-
+        
         <!-- Put content here! -->
         
 
-        <footer></footer>
+        <footer>
+
+        </footer>
         <script
             src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
             integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
