added pay_rules example

--- a/Workbook2/javaScriptPlayground.html
+++ b/Workbook2/javaScriptPlayground.html
@@ -1,16 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>Document</title>
+    </head>
+    <body>
+        ` ' "
 
-    <script>
-        var firstName = "Greg";
-        console.log(firstName);
-    </script>
-</body>
+        <script>
+            "use strict";
+            console.log(Math);
+            // var num1 = 10;
+            // var num2 = 5;
+            // var num3 = 15;
+
+            // var total = num1 + num2 + num3;
+
+            // console.log(total);
+
+            var word1 = "Bird";
+            var word2 = "is";
+            var words1 = "the word";
+
+            var sentence1 = word1 + " " + word2 + " " + words1; // "Bird is the word"
+
+            console.log(sentence1);
+        </script>
+    </body>
 </html>
