--- a/Workbook2/HelloWorldWebsite/index.html
+++ b/Workbook2/HelloWorldWebsite/index.html
@@ -9,9 +9,6 @@
 
         <div id="message"></div>
 
-        <script>
-            
-        </script>
-
+        <script src="scripts/message.js"></script>
     </body>
 </html>
