--- a/Workbook2/inputJsExample/index.html
+++ b/Workbook2/inputJsExample/index.html
@@ -9,5 +9,22 @@
         <p>Name: <input type="text" id="nameField"/></p>
         <p>Favorite Animal: <input type="text" id="favAnimalField" /></p>
         <p><input type="button" id="showBtn" value="Show"/></p>
+        <p id="message-placeholder"></p>
+
+        <script>
+            const nameInputEl = document.getElementById("nameField");
+            const favAnimalInputEl = document.getElementById("favAnimalField");
+
+            const nameStr = nameInputEl.value;
+            const favAnimalStr = favAnimalInputEl.value;
+
+            let message = `Hello ${nameStr}, it's so cool that you like ${favAnimalStr}, too!`;
+
+            const messagePlaceholderEl = document.getElementById("message-placeholder");
+            messagePlaceholderEl.innerHTML = message;
+
+            
+
+        </script>
     </body>
 </html>
