--- a/Workbook2/inputJsExample/index.html
+++ b/Workbook2/inputJsExample/index.html
@@ -6,25 +6,34 @@
         <title>Document</title>
     </head>
     <body>
-        <p>Name: <input type="text" id="nameField"/></p>
+        <p>Name: <input type="text" id="nameField" /></p>
         <p>Favorite Animal: <input type="text" id="favAnimalField" /></p>
-        <p><input type="button" id="showBtn" value="Show"/></p>
+        <p><input type="button" id="showBtn" value="Show" /></p>
         <p id="message-placeholder"></p>
 
         <script>
-            const nameInputEl = document.getElementById("nameField");
-            const favAnimalInputEl = document.getElementById("favAnimalField");
+            window.onload = customInit(); // Waiting for everything on the page to be loaded
 
-            const nameStr = nameInputEl.value;
-            const favAnimalStr = favAnimalInputEl.value;
+            function customInit() {
+                console.log("Page has loaded");
+                const showBtnEl = document.getElementById("showBtn");
+                showBtnEl.onclick = handleBtnOnclick;
+            }
 
-            let message = `Hello ${nameStr}, it's so cool that you like ${favAnimalStr}, too!`;
+            function handleBtnOnclick() {
+                console.log("Button clicked");
+                
+                const nameInputEl = document.getElementById("nameField");
+                const favAnimalInputEl = document.getElementById("favAnimalField");
 
-            const messagePlaceholderEl = document.getElementById("message-placeholder");
-            messagePlaceholderEl.innerHTML = message;
+                const nameStr = nameInputEl.value;
+                const favAnimalStr = favAnimalInputEl.value;
 
-            
+                const message = `Hello ${nameStr}, it's so cool that you like ${favAnimalStr}, too!`;
 
+                const messagePlaceholderEl = document.getElementById("message-placeholder");
+                messagePlaceholderEl.innerHTML = message;
+            }
         </script>
     </body>
 </html>
