--- a/Workbook2/WebProjects/Calculator/index.html
+++ b/Workbook2/WebProjects/Calculator/index.html
@@ -42,6 +42,8 @@
 
             answerInputEl.value = numberOne + numberTwo;
             
+            numberOneInputEl.value = "";
+            numberTwoInputEl.value = "";
         }
         function handleSubtractOnclick(){
             console.log("Subtract button clicked");
@@ -53,6 +55,9 @@
             const numberTwo = Number(numberTwoInputEl.value);
 
             answerInputEl.value = numberOne - numberTwo;
+
+            numberOneInputEl.value = "";
+            numberTwoInputEl.value = "";
         }
         function handleMultiplyOnclick(){
             console.log("Multiply button clicked");
@@ -65,6 +70,9 @@
             const numberTwo = Number(numberTwoInputEl.value);
 
             answerInputEl.value = numberOne * numberTwo;
+
+            numberOneInputEl.value = "";
+            numberTwoInputEl.value = "";
         }
         function handleDivideOnclick(){
             console.log("Divide button clicked");
@@ -77,6 +85,9 @@
             const numberTwo = Number(numberTwoInputEl.value);
 
             answerInputEl.value = numberOne / numberTwo;
+
+            numberOneInputEl.value = "";
+            numberTwoInputEl.value = "";
         }
     </script>
 </body>
