added examples to checkbox playground

--- a/Workbook3/WorkingWithForms2/CheckboxAndRadioButtons/CheckboxPlayground/index.html
+++ b/Workbook3/WorkingWithForms2/CheckboxAndRadioButtons/CheckboxPlayground/index.html
@@ -9,6 +9,11 @@
 
     <fieldset>
         <legend>Rental Car Options:</legend>
+
+        <input type="checkbox" id="govt" name="govt" value="govt" />
+        <span id="govt-label">Are you a US Government employee?</span>
+        <br />
+
         <input type="checkbox" id="tollTag" name="tollTag" value="395" checked />
         Electronic Toll Tag ($3.95/day plus tolls)
         <br />
