added page navigation page to workshop VacationResort

--- a/Workshops/Workbook3_VacationResort/overnightStay.html
+++ b/Workshops/Workbook3_VacationResort/overnightStay.html
@@ -11,7 +11,7 @@
         <a href="overnightStay.html">Overnight Stay</a>
     </nav>
 
-    <h1>Home</h1>
+    <h1>Overnight Stay</h1>
     
 </body>
 </html>
