--- a/Workbook5/codeAlongs/domBomPlayground/index.html
+++ b/Workbook5/codeAlongs/domBomPlayground/index.html
@@ -9,6 +9,12 @@
     <h1>Home</h1>
     <button id="submit-btn">Submit</button>
     <button id="close-btn">Close</button>
+
+    <div class="box"></div>
+    <div class="box"></div>
+    <div class="box"></div>
+    <div class="box"></div>
+
     <script src="script.js"></script>
 </body>
 </html>
