added toDropdown example

--- a/Workbook7/CodeAlongs/workingWithFetch/todoDropdown/index.html
+++ b/Workbook7/CodeAlongs/workingWithFetch/todoDropdown/index.html
@@ -1,21 +1,41 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    <ul>
-        <li>
-            <a href="index.html">Home</a>
-        </li>
-        <li>
-            <a href="todo.html">Todo</a>
-        </li>
-    </ul>
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>Document</title>
+    </head>
+    <body>
+        <ul>
+            <li>
+                <a href="index.html">Home</a>
+            </li>
+            <li>
+                <a href="todo.html">Todo</a>
+            </li>
+        </ul>
 
-    <h1>Home</h1>
+        <h1>Home</h1>
 
-</body>
+        <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla vel pellentesque magna. Quisque imperdiet id
+            lectus non iaculis. Morbi vulputate lorem a felis fringilla sagittis. Sed laoreet, sem eget luctus
+            tristique, velit purus lacinia turpis, in mollis felis lacus a eros. Nullam scelerisque, sem facilisis
+            lacinia molestie, nisi velit ullamcorper risus, quis ullamcorper lectus mauris et est. Proin sed ex id
+            sapien pharetra pharetra eu at tortor. Mauris bibendum sem a velit fermentum ullamcorper. Pellentesque porta
+            pharetra tortor. Sed aliquam diam nec aliquam semper. Vestibulum ante ipsum primis in faucibus orci luctus
+            et ultrices posuere cubilia curae; Interdum et malesuada fames ac ante ipsum primis in faucibus. Integer
+            blandit leo quis nunc sollicitudin, nec laoreet massa consequat. Aliquam non venenatis diam.
+        </p>
+        <p>
+            Fusce tortor sem, euismod et erat eget, imperdiet fringilla metus. Suspendisse rhoncus quam et imperdiet
+            viverra. Phasellus tellus eros, ullamcorper tincidunt justo eget, facilisis imperdiet mi. Nunc consequat
+            lacus ac lorem pharetra rutrum. Maecenas vestibulum aliquet fermentum. Morbi congue ante ac tellus efficitur
+            pulvinar. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Proin
+            convallis sem ac urna fringilla, in pharetra neque lobortis. Etiam eget dictum libero, vel rutrum enim. Duis
+            tristique facilisis mi eget commodo. In eros ex, rhoncus eget ultrices ut, vestibulum tincidunt odio. Mauris
+            sollicitudin eros non ligula vehicula, in vehicula nunc euismod. Phasellus semper purus nec metus rhoncus
+            posuere. Vestibulum posuere dignissim nulla eget finibus.
+        </p>
+    </body>
 </html>
