added logo image

--- a/pokemon/index.html
+++ b/pokemon/index.html
@@ -7,6 +7,9 @@
     <link href="assets/css/index.css" rel="stylesheet" />
 </head>
 <body>
+    <nav>
+        <div id="logo"></div>
+    </nav>
     
     <script src="assets/js/index.js"></script>
 </body>
