WIP- working on home page

--- a/pokemon/index.html
+++ b/pokemon/index.html
@@ -10,7 +10,17 @@
     <nav>
         <div id="logo"></div>
     </nav>
-    
+    <div id="home">
+        <div id="search-sort-filter-container"></div>
+
+        <div id="list">
+            <div class="card">
+                <div class="thumbnail" style="background-image: url('https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/official-artwork/shiny/4.png')"></div>
+                <div class="details"></div>
+            </div>
+            
+        </div>
+    </div>
     <script src="assets/js/index.js"></script>
 </body>
 </html>
